--- a/package.json
+++ b/package.json
@@ -4,11 +4,7 @@
   "private": true,
   "dependencies": {
     "autoprefixer": "7.1.2",
-<<<<<<< HEAD
     "babel-core": "^6.26.3",
-=======
-    "babel-core": "6.25.0",
->>>>>>> c26cbd5129fb39dfae9f5a302866bf22df2d9818
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
     "babel-loader": "7.1.1",
@@ -38,6 +34,7 @@
     "react": "^16.0.0",
     "react-dev-utils": "^4.0.1",
     "react-dom": "^16.0.0",
+    "react-scripts": "^3.0.1",
     "style-loader": "0.18.2",
     "sw-precache-webpack-plugin": "0.11.4",
     "url-loader": "0.5.9",
