--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "deploygh": "npm run build && git subtree push --prefix build ml ghpages"
   },
   "jest": {
     "collectCoverageFrom": [
