--- a/package.json
+++ b/package.json
@@ -53,8 +53,8 @@
     "whatwg-fetch": "2.0.3"
   },
   "scripts": {
-    "start": "node scripts/start.js",
-    "build": "node scripts/build.js",
+    "start": "node ./scripts/start.js",
+    "build": "node ./scripts/build.js",
     "test": "node scripts/test.js --env=jsdom",
     "deploygh": "npm run build && git subtree push --prefix build ml ghpages"
   },
